# StickyNotes

./: .gitignore  README.en.md  README.md  pyproject.toml  run-sticky-notes.bat  sticky-notes-onefile.spec  sticky-notes.spec
app/: __init__.py  config.py  controller.py  icons.py  main.py  single_instance.py  startup.py
app/models/: note.py
app/storage/: __init__.py  note_repository.py
app/sync/: __init__.py  backend.py  engine.py  google_drive.py
app/ui/: note_window.py  settings_dialog.py
docs/: PROJECT_PLAN.md  blog-post.html  blog-post.md
tests/: test_note_repository.py  test_note_window.py  test_single_instance.py  test_sync.py
tools/: generate-icon.ps1
